# cambiobot

./: .env  .env.example  .gitignore  ARCHITECTURE.md  BOTONES_DEMO.md  README.md  bot.pid  cambiobot.service  main.py  main_modular.py  migrate.sh  pyproject.toml  run.sh
src/: main.py
src/bot/: cambio_bot.py
src/config/: settings.py
src/handlers/: button_handlers.py  command_handlers.py
src/services/: image_service.py  rates_service.py
src/utils/: logger.py
