[project]
name = "cambiobot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.12.14",
    "pillow>=11.3.0",
    "playwright>=1.53.0",
    "python-dotenv>=1.1.1",
    "python-telegram-bot[job-queue]>=22.2",
]
